src/test/ui/dyn-keyword/dyn-angle-brackets.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/dyn-angle-brackets.rs:15:10
   |
LL |         <fmt::Debug>::fmt(self, f)
   |          ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/dyn-angle-brackets.rs:4:9
   |
LL | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: use `dyn`
   |
LL |         <dyn fmt::Debug>::fmt(self, f)
   |          +++

error: aborting due to previous error

